fixed display issue on firefox

--- a/src/sass/pages/_tennis.scss
+++ b/src/sass/pages/_tennis.scss
@@ -151,4 +151,11 @@
       object-fit: contain;
     }
   }
+
+  .tennis-gallery {
+    img {
+      min-block-size: 40vh;
+      min-inline-size: 150px;
+    }
+  }
 }
